relay-event-normalization/src/normalize/snapshots/relay_event_normalization__normalize__tests__normalize_logger_too_long_single_word.snap
---
source: relay-event-normalization/src/normalize/mod.rs
expression: SerializableAnnotated(&event)
---
{
  "event_id": "[event-id]",
  "level": "error",
  "type": "default",
  "logger": "*is-way_too_long-and_we_only_have_one_word-so_we_cant_smart_trim",
  "platform": "java",
  "contexts": {
    "trace": {
      "trace_id": "[trace-id]",
      "span_id": "[span-id]",
      "status": "unknown",
      "type": "trace"
    }
  },
  "_meta": {
    "": {
      "rem": [
        [
          "@logger:replace",
          "s",
          0,
          5
        ]
      ],
      "len": 68
    },
    "contexts": {
      "trace": {
        "span_id": {
          "": {
            "rem": [
              [
                "span_id.missing",
                "s"
              ]
            ]
          }
        },
        "trace_id": {
          "": {
            "rem": [
              [
                "trace_id.missing",
                "s"
              ]
            ]
          }
        }
      }
    }
  }
}
