relay-event-normalization/src/normalize/snapshots/relay_event_normalization__normalize__tests__normalize_logger_trimmed.snap
---
source: relay-event-normalization/src/normalize/mod.rs
expression: SerializableAnnotated(&event)
---
{
  "event_id": "[event-id]",
  "level": "error",
  "type": "default",
  "logger": "",
  "platform": "java",
  "contexts": {
    "trace": {
      "trace_id": "[trace-id]",
      "span_id": "[span-id]",
      "status": "unknown",
      "type": "trace"
    }
  },
  "_meta": {
    "": {
      "rem": [
        [
          "@logger:remove",
          "x",
          0,
          8
        ]
      ],
      "len": 8
    },
    "contexts": {
      "trace": {
        "span_id": {
          "": {
            "rem": [
              [
                "span_id.missing",
                "s"
              ]
            ]
          }
        },
        "trace_id": {
          "": {
            "rem": [
              [
                "trace_id.missing",
                "s"
              ]
            ]
          }
        }
      }
    }
  }
}
