relay-event-normalization/src/normalize/snapshots/relay_event_normalization__normalize__tests__normalize_logger_word_leading_dots.snap
---
source: relay-event-normalization/src/normalize/mod.rs
expression: SerializableAnnotated(&event)
---
{
  "event_id": "[event-id]",
  "level": "error",
  "type": "default",
  "logger": "*this-tests-the-smart-trimming-and-word-removal-around-dot.words",
  "platform": "java",
  "contexts": {
    "trace": {
      "trace_id": "[trace-id]",
      "span_id": "[span-id]",
      "status": "unknown",
      "type": "trace"
    }
  },
  "_meta": {
    "": {
      "rem": [
        [
          "@logger:replace",
          "s",
          0,
          3
        ]
      ],
      "len": 66
    },
    "contexts": {
      "trace": {
        "span_id": {
          "": {
            "rem": [
              [
                "span_id.missing",
                "s"
              ]
            ]
          }
        },
        "trace_id": {
          "": {
            "rem": [
              [
                "trace_id.missing",
                "s"
              ]
            ]
          }
        }
      }
    }
  }
}
