relay-event-normalization/src/normalize/snapshots/relay_event_normalization__normalize__tests__normalize_logger_word_trimmed_at_max.snap
---
source: relay-event-normalization/src/normalize/mod.rs
expression: SerializableAnnotated(&event)
---
{
  "event_id": "[event-id]",
  "level": "error",
  "type": "default",
  "logger": "*.in.this_part-is-kept.this_right_here-is_an-extremely_long_word",
  "platform": "java",
  "contexts": {
    "trace": {
      "trace_id": "[trace-id]",
      "span_id": "[span-id]",
      "status": "unknown",
      "type": "trace"
    }
  },
  "_meta": {
    "": {
      "rem": [
        [
          "@logger:replace",
          "s",
          0,
          15
        ]
      ],
      "len": 78
    },
    "contexts": {
      "trace": {
        "span_id": {
          "": {
            "rem": [
              [
                "span_id.missing",
                "s"
              ]
            ]
          }
        },
        "trace_id": {
          "": {
            "rem": [
              [
                "trace_id.missing",
                "s"
              ]
            ]
          }
        }
      }
    }
  }
}
